--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "JIE FU (Jeff)"
+  name             : " (Jeff) JIE FU"
   avatar           : "images/Jeff.png"
   bio              : #"Lorem ipsum College"
   location         : "Hoboken, USA"
