--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "Hoboken, USA"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?hl=ja&user=VcgK6nAAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?&user=VcgK6nAAAAAJ"
   email            : "jfu13@stevens.edu"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
